--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  padding: 10px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,7 +18,14 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0px;
+  gap: 10px;
 }
+
+/* li{
+  padding: 5px;
+} */
 
 a {
   font-size: 22px;
