--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -10,6 +10,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.container,
+.item {
+  display: flex;
+  align-items: flex-end;
+}
+
+.container {
+  justify-content: center;
+  gap: 52px;
+}
+
+.item {
+  flex-direction: column;
+  width: 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
